--- a/projects/sorting/index.html
+++ b/projects/sorting/index.html
@@ -15,7 +15,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <title>SI 649 Individual Project - Jackson Hammond</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
@@ -169,30 +169,31 @@
           <canvas id="shared-line-chart"></canvas>
         </div>
       </div>
-      <h2 id='sources'>Sources and Citations</h2>
-      <p>All the sources I collected code and other information from are listed below for reference.</p>
-      <p>I borrowed much of javascript code that handles the actual sorting of the arrays from Justin Johnson. His "AnimatedArray" object and subsequent sorting code is what drives much of the background computation for this project. See citations below for more information.</p>
-      <ul>
-        <li>index.html. <i>sorting.js</i>, commit d8d7a1a30c00fde2456acc1063d5e22929378681, Justin Johnson, 2015. <i>GitHub</i>, https://github.com/jcjohnson/sorting.js/blob/master/index.html</li>
-        <li>sorting.js. <i>sorting.js</i>, commit d8d7a1a30c00fde2456acc1063d5e22929378681, Justin Johnson, 2015. <i>GitHub</i>, https://github.com/jcjohnson/sorting.js/blob/master/js/sorting.js</li>
-      </ul>
-      <p>Below is a formal listing of sources for all the sorting code explanations and pseudocode.</p>
-      <ul>
-        <li>"Bubble sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Bubble_sort. Accessed 2 November 2019. </li>
-        <li>"Selection sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Selection_sort. Accessed 2 November 2019. </li>
-        <li>"Data Structure and Algorithms Selection Sort." <i>TutorialsPoint</i>, https://www.tutorialspoint.com/data_structures_algorithms/selection_sort_algorithm.htm. Accessed 2 November 2019. </li>
-        <li>"Insertion sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Insertion_sort. Accessed 2 November 2019. </li>
-        <li>"Odd-even sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Odd%E2%80%93even_sort. Accessed 2 November 2019. </li>
-        <li>"Cocktail shaker sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Cocktail_shaker_sort. Accessed 2 November 2019. </li>
-        <li>"Quicksort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Quicksort. Accessed 2 November 2019. </li>
-        <li>"Heapsort." <i>Wikipedia</i>, hthttps://en.wikipedia.org/wiki/Heapsort. Accessed 2 November 2019. </li>
-        <li>"Merge sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Merge_sort. Accessed 2 November 2019. </li>
-        <li>"Data Structures - Merge Sort Algorithm." <i>TutorialsPoint</i>, https://www.tutorialspoint.com/data_structures_algorithms/merge_sort_algorithm.htm. Accessed 2 November 2019. </li>
-        <li>"Introsort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Introsort. Accessed 2 November 2019. </li>
-      </ul>
-
       <h3>Author Info</h3>
       <p>Created and Designed by Jackson Hammond, SI 649 Individual Project Fall 2019.
+      <h4 id='sources'>Sources and Citations</h4>
+      <div style='font-size: 0.75rem;'>
+        <p>All the sources I collected code and other information from are listed below for reference.</p>
+        <p>I borrowed much of javascript code that handles the actual sorting of the arrays from Justin Johnson. His "AnimatedArray" object and subsequent sorting code is what drives much of the background computation for this project. See citations below for more information.</p>
+        <ul>
+          <li>index.html. <i>sorting.js</i>, commit d8d7a1a30c00fde2456acc1063d5e22929378681, Justin Johnson, 2015. <i>GitHub</i>, https://github.com/jcjohnson/sorting.js/blob/master/index.html</li>
+          <li>sorting.js. <i>sorting.js</i>, commit d8d7a1a30c00fde2456acc1063d5e22929378681, Justin Johnson, 2015. <i>GitHub</i>, https://github.com/jcjohnson/sorting.js/blob/master/js/sorting.js</li>
+        </ul>
+        <p>Below is a formal listing of sources for all the sorting code explanations and pseudocode.</p>
+        <ul>
+          <li>"Bubble sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Bubble_sort. Accessed 2 November 2019. </li>
+          <li>"Selection sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Selection_sort. Accessed 2 November 2019. </li>
+          <li>"Data Structure and Algorithms Selection Sort." <i>TutorialsPoint</i>, https://www.tutorialspoint.com/data_structures_algorithms/selection_sort_algorithm.htm. Accessed 2 November 2019. </li>
+          <li>"Insertion sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Insertion_sort. Accessed 2 November 2019. </li>
+          <li>"Odd-even sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Odd%E2%80%93even_sort. Accessed 2 November 2019. </li>
+          <li>"Cocktail shaker sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Cocktail_shaker_sort. Accessed 2 November 2019. </li>
+          <li>"Quicksort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Quicksort. Accessed 2 November 2019. </li>
+          <li>"Heapsort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Heapsort. Accessed 2 November 2019. </li>
+          <li>"Merge sort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Merge_sort. Accessed 2 November 2019. </li>
+          <li>"Data Structures - Merge Sort Algorithm." <i>TutorialsPoint</i>, https://www.tutorialspoint.com/data_structures_algorithms/merge_sort_algorithm.htm. Accessed 2 November 2019. </li>
+          <li>"Introsort." <i>Wikipedia</i>, https://en.wikipedia.org/wiki/Introsort. Accessed 2 November 2019. </li>
+        </ul>
+      </div>
     </div>
 
     <script>
