Further small changes

--- a/projects/sorting.html
+++ b/projects/sorting.html
@@ -61,8 +61,8 @@
           <div class='col-half'>
             <p>A dashboard to help new computer science students learn the complexities of sorting algorithms.</p>
             <div class='project-details'>
-              <p>Dashboard Designer and Developer</p>
-              <p>Chart.js / Bootstrap</p>
+              <p>Info Viz Designer / Developer</p>
+              <p>Chart.js / Custom JS & CSS</p>
               <p>Oct. 2019</p>
             </div>
           </div>
@@ -80,7 +80,7 @@
         <div class='row'>
           <div class='text-wrapper'>
             <p>Learning sorting algorithms, such as <a href='https://en.wikipedia.org/wiki/Merge_sort' target='_blank'>Merge Sort</a> and <a href='https://en.wikipedia.org/wiki/Quicksort' target='_blank'>Quicksort</a>, is something many new computer science students need to accomplish. I wanted to design and build this interactive dashboard to help them better visualize the differences between several popular algorithms to make their studies more engaging.</p>
-            <p>I used an existing Javascript sorting engine to drive the data processing for this project (<a href='sorting/index.html#sources' target='_blank'>see sources</a>), but the user interaction was extremely limited in its original implementation. I kept all the logic for sorting and tracking the sort steps, but replaced all the charting and interactive elements using <a href='https://getbootstrap.com/docs/4.4/getting-started/introduction/' target='_blank'>Bootstrap 4</a> and <a href='https://www.chartjs.org/' target='_blank'>Chart.js</a>. With these improvements, combined with informational material gathered about each featured algorithm, I created a richer learning experience. </p>
+            <p>I used an existing Javascript sorting engine to drive the data processing for this project (<a href='sorting/index.html#sources' target='_blank'>see sources</a>), but the user interaction was extremely limited in its original implementation. I kept all the logic for sorting and tracking the sort steps, but replaced all the charting and interactive elements using <a href='https://www.chartjs.org/' target='_blank'>Chart.js</a>. With these improvements, combined with informational material gathered about each featured algorithm, I created a richer learning experience. </p>
           </div>
         </div>
 
