--- a/projects/sorting/index.html
+++ b/projects/sorting/index.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>SI 649 Individual Project - Jackson Hammond</title>
+    <title>Seeing Sorting Dashboard</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
     <script src='js/sorting.js'></script>
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Let's Learn Sorting</h1>
+      <h1>Seeing Sorting</h1>
       <h2>Algorithm Investigation</h2>
       <p>Choose an algorithm below to learn more about how it works, see its pseudo code, and watch it sort an array step by step.</p>
       <p>Elements being compared are <span style="color: #7156FF;"><b>purple</b></span>, and elements being swapped are <span style="color: #34CC31;"><b>green</b></span>.</p>
