Moving towards a more blog-like layout

--- a/projects/sorting/index.html
+++ b/projects/sorting/index.html
@@ -16,7 +16,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Seeing Sorting Dashboard</title>
+    <title>Seeing Sorting</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
     <script src='js/sorting.js'></script>
@@ -30,9 +30,12 @@
   <body>
     <div class="container">
       <div class='header-text-wrapper'>
-        <h1 >Seeing Sorting</h1>
-        <p>Learning sorting is hard. The algorithms and their Big-O notation take lots of practice to understand, but all new CS students need to learn them. It's like eating your vegetables 🥕🥦🌽🥬</p>
-        <p>Use this tool to help with those studies. It uses bar charts to illustrate data arrays as they're being sorted. Array elements that are being compared are <span style="color: #7156FF;"><b>purple</b></span>, and elements being swapped are <span style="color: #34CC31;"><b>green</b></span>. The line charts help show both the time and the cost an algorithm takes to sort an array.</p>
+        <div style='margin-bottom: 2rem;'>
+          <h1 style='margin-bottom: 0;'>Seeing Sorting</h1>
+          <sub>By <a href='https://jbhammon.github.io/' style='color: #313131' target='_blank'>Jackson Hammond</a></sub>
+        </div>
+        <p style='margin-bottom: 2rem;'>Learning sorting is hard. The algorithms and their Big-O notation take lots of practice to understand, but all new CS students need to learn them. It's like eating your vegetables 🥕🥦🌽🥬</p>
+        <p style='margin-bottom: 2rem;'>Use this tool to help with those studies. It uses bar charts to illustrate data arrays as they're being sorted. Array elements that are being compared are <span style="color: #7156FF;"><b>purple</b></span>, and elements being swapped are <span style="color: #34CC31;"><b>green</b></span>. The line charts help show both the time and the cost an algorithm takes to sort an array.</p>
       </div>
 
       <div class="header-text-wrapper">
