More styling changes

--- a/projects/sorting/index.html
+++ b/projects/sorting/index.html
@@ -30,7 +30,7 @@
   <body>
     <div class="container">
       <div class='header-text-wrapper'>
-        <div style='margin-bottom: 2rem;'>
+        <div style='margin-bottom: 3rem;'>
           <h1 style='margin-bottom: 0;'>Seeing Sorting</h1>
           <sub>By <a href='https://jbhammon.github.io/' style='color: #313131' target='_blank'>Jackson Hammond</a></sub>
         </div>
@@ -54,7 +54,7 @@
           <option value='introsort'>Introsort</option>
         </select>
       </div>
-      <div class="row">
+      <div class="row" style='margin-bottom: 4rem;'>
         <div class="column">
           <p id='english-copy'></p>
           <pre><code style=display:block;white-space:pre-wrap id='pseudocode-copy'></code></pre>
