Updating copy and assets of AI project page

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -76,15 +76,14 @@
       <div class="container">
         <div class="row margin-bottom-8">
           <div class="text-wrapper">
-            <p>The University of Michigan's <a href='https://ai.umich.edu/' target='_blank'>Center for Academic Innovation</a> is a organization that strives to make world-class education available to anyone who desires it. They use design, research, expertise, and technology to bring better learning experiences to larger audiences than ever before, and I served as a <span style='font-weight: bold;'>UX Design Fellow </span> to design and develop new experiences.</p>
-            <p>One of those tools that AI has created is <a href='https://online.umich.edu/' target='_blank'>Michigan Online</a>, and it served as my main area of focus. Michigan Online strives to make the world-class educational opportunities from the University of Michigan available to the full U-M community and help learners connect during their educational journeys. </p>
+            <p>I was as a UX Design Fellow at the University of Michigan's <a href='https://ai.umich.edu/' target='_blank'>Center for Academic Innovation</a> and most of my work focused on designing and implementing new experiences for their website <a href='https://online.umich.edu/' target='_blank'>Michigan Online</a>.</p>
           </div>
         </div>
 
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>A New Degree Details Experience</h2>
-            <p>The content library on Michigan Online is growing rapidly, and their catalog of online degrees is becoming increasingly popular. Pursuing an online degree from the University of Michigan is a large investment of time and money, and many learners will want to do lots of research before making their decision. An improved experience needed to be designed and developed to give learners the detailed information they’re seeking during their research.</p>
+            <p>The content library on Michigan Online was growing rapidly, and their catalog of online degrees was becoming increasingly popular. Pursuing an online degree from the University of Michigan is a large investment of time and money, and many learners want to do research before making their decision. An improved experience needed to be designed and developed to give learners the detailed information they’re seeking during their research.</p>
           </div>
         </div>
 
@@ -99,145 +98,98 @@
 
         <div class="row">
           <div class="text-wrapper">
-            <h3>Previous State</h3>
-            <p>Learning experiences that are considered Courses, Series, or Teach-Outs have their own “Details” page on Michigan Online. However, a similar page did not exist for online degrees listed on Michigan Online. Each degree only had a short paragraph explaining the degree and a short promo video for learners.</p>
+            <h2>Understanding</h2>
+            <p>Michigan Online Courses already had a detailed page describing their content and purpose for users. However, a similar page did not exist for online degrees listed on Michigan Online, and I was responsible for filling that experience gap.</p>
           </div>
         </div>
 
         <div class="row margin-bottom-4">
           <div class="col-half">
-            <img src='../assets/ai_internship/course details.png' alt='Michigan Online course details page'>
+            <figure>
+              <img class='screenshot' src='../assets/ai_internship/course details.png' alt='Michigan Online course details page'>
+              <figcaption>Full details about a Michigan Online course</figcaption>
+            </figure>
           </div>
           <div class='col-half'>
-            <img src='../assets/ai_internship/old_degree_details.png' alt='Old version of the degree details from Michigan Online'>
+            <figure>
+              <img class='screenshot' src='../assets/ai_internship/old_degree_details.png' alt='Old version of the degree details from Michigan Online'>
+              <figcaption>Degrees lacked any detailed information</figcaption>
+            </figure>
           </div>
         </div>
 
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
-            <h3>Need for More Information</h3>
-            <p>Coursera has plenty of information about the available online degrees. That is where students watch the lecture videos for the MOOCs and online degrees they’re enrolled in, and those individual Coursera pages are maintained by the respective U-M colleges who offer the degrees.</p>
-            <p>However, Michigan Online wants to provide its users with that information as well. We needed to design an experience to answer potential learners’ questions about the degrees while minimizing the maintenance costs for the Michigan Online team.</p>
-            <img src='../assets/ai_internship/coursera_degree.png' alt='Courseras page for an online Michigan degree'>
+            <h2>Competitive Evaluation and Interviews</h2>
+            <p>I conducted a competitive evaluation to better my understanding of how online graduate degrees are advertised and described across the web. I studied online learning platforms such as Coursera to understand their information hierarchy and organization, and other universities to learn how schools promote their own learning materials.</p>
+            <p>I also organized several informal interviews with stakeholders at Academic Innovation and other schools and colleges across U-M. I couldn’t speak with potential students applying to these U-M graduate programs, due to privacy concerns, so these interviews were key to help me understand our intended users’ needs.</p>
+            <figure>
+              <img class='screenshot' src='../assets/ai_internship/coursera_degree.png' alt='Courseras page for an online Michigan degree'>
+              <figcaption>Online degrees on Coursera</figcaption>
+            </figure>
           </div>
         </div>
 
         <div class="row">
           <div class="text-wrapper">
-            <h3>Design Process</h3>
-            <img src='../assets/ai_internship/design_flow.png' alt='My design process for creating the Degree Details page'>
+            <h2>Personas</h2>
+            <p>Using what I learned about our intended users I created two simple personas to help keep our upcoming designs focused on the right tasks and needs.</p>
+          </div>
+        </div>
+        <div class='row margin-bottom-4'>
+          <div class='col-half'>
+            <img src='../assets/ai_internship/persona_1.png' alt='Persona 1'>
+          </div>
+          <div class='col-half'>
+            <img src='../assets/ai_internship/persona_2.png' alt='Persona 2'>
           </div>
         </div>
 
         <div class="row">
           <div class="text-wrapper">
-            <h4>Needfinding and Competitive Evaluation</h4>
-            <p>I interviewed various Academic Innovation stakeholders to identify the types of learners the new Degree Details page should target and which questions it needs to help answer.</p>
-            <p>Together we identified two target learners we wanted to design this page for. They were learners who are considering if a graduate degree is something they should pursue, and learners who are debating between residential and online graduate degree programs. They questions we wanted to answer regarded ideas like the intended audience of the degree, subject matter of the courses, and the costs of tuition and fees.</p>
-            <p>After defining our audience, I reviewed how other online degrees are advertised to potential learners. The online learning platforms Coursera and EdX served as my primary sources, but I also reviewed several other universities’ online degree listings to help further understand what information our Degree Details page would need to provide.</p>
+            <h2>Design Goals</h2>
+            <p>Through speaking with stakeholders at Michigan Online together we created three goals for the new Degree Details design:</p>
+            <ol>
+              <li>Minimize maintenance costs for Michigan Online team</li>
+              <li>Present information specific enough for target users</li>
+              <li>Design an experience general enough to work for any U-M degree</li>
+            </ol>
           </div>
         </div>
 
         <div class="row">
           <div class="text-wrapper">
-            <h4>Iterative Improvements</h4>
-            <p>Our design process was very iterative and helped us incorporate a large amount of feedback into the final product. I would create several mockups and present them to other members of the Michigan Online design team to gather feedback on the information hierarchy and how well it matched with Michigan Online’s brand and visual identity.</p>
-            <p>Once the design team was happy with a round of mockups I would present them to the entire Michigan Online team for feedback. This helped form exactly what information would be included in the final product.</p>
+            <h2>Mockup Iteration</h2>
+            <p>Throughout the iteration process I focused on three targets for my designs:</p>
+            <ol>
+              <li>Intelligent information architecture and ownership</li>
+              <li>Matching the existing identity of Michigan Online</li>
+              <li>Properly displaying info for our personas</li>
+            </ol>
           </div>
         </div>
 
         <div class="row">
           <div class="text-wrapper">
-            <h5>First Iteration</h5>
-            <p>Our first round of mockups. We were just getting an idea of how to lay out the information together on one the page. The “why study this degree?” and “who is this degree for?” sections persisted through to the final product.</p>
+            <h2>Final Product</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="col-third">
-            <img src='../assets/ai_internship/degree_details_1_1.png' alt='First iteration 1'>
+        <div class='row margin-bottom-4'>
+          <div class='col-half'>
+            <p>After multiple mockup iterations my designs received signoff from Michigan Online stakeholders. I was able to incorporate many pieces of Michigan Online’s visual identity in the final product while still creating a new and informative experience for users.</p>
+            <p>The tab navigation allowed for a shorter, more scannable page for users and presented information organized with our personas in mind.</p>
+            <p>The colored stripes and bulleted lists made for modular sections that met our goals of being specific enough for users but general enough to work for any degree.</p>
           </div>
-          <div class="col-third">
-            <img src='../assets/ai_internship/degree_details_1_2.png' alt='First iteration 2'>
-          </div>
-          <div class="col-third">
-            <img src='../assets/ai_internship/degree_details_1_3.png' alt='First iteration 3'>
+          <div class='col-half'>
+            <img class='screenshot' src='../assets/ai_internship/final_design_total.png' alt=''>
           </div>
         </div>
 
-        <div class="row">
-          <div class="text-wrapper">
-            <h5>Second Iteration</h5>
-            <p>Next round I started experimenting with the header of the page. Until now the most significant learning experience on Michigan Online is a “Series”, a sequential collection of Courses, which didn’t compare to the work a full degree requires. We wanted to give the degree details page a stronger presence.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-third">
-            <img src='../assets/ai_internship/degree_details_2_1.png' alt='Second iteration 1'>
-          </div>
-          <div class="col-third">
-            <img src='../assets/ai_internship/degree_details_2_2.png' alt='Second iteration 2'>
-          </div>
-          <div class="col-third">
-            <img src='../assets/ai_internship/degree_details_2_3.png' alt='Second iteration 3'>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="text-wrapper">
-            <h5>Third Iteration</h5>
-            <p>Next, we started focusing on all the specific content the page needs, and we experimented with using colors and whitespace to divide up the information to emulate Michigan Online’s homepage. Stakeholders were happy with the information we included in the Degree Details page. However, that resulted in a very long page, and required users to scroll a lot to find what they’re looking for.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-quarter">
-          </div>
-          <div class="col-quarter">
-            <img src='../assets/ai_internship/degree_details_3_1.png' alt='Third iteration 1'>
-          </div>
-          <div class="col-quarter">
-            <img src='../assets/ai_internship/degree_details_3_2.png' alt='Third iteration 2'>
-          </div>
-          <div class="col-quarter">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="text-wrapper">
-            <h5>Final Iteration</h5>
-            <p>To avoid creating enormous pages we added tab navigation to our page. This greatly reduced the page length and made it easier for users to find the information they are searching for. The header gives learners call-to-action buttons to learn more or apply to the program.</p>
-          </div>
-        </div>
         <div class="row margin-bottom-4">
-          <div class="col-half">
-            <p>The Overview contains copy that describes the degree, skills you’ll learn, and who the degree is intended for.</p>
-            <img src='../assets/ai_internship/degree_details_4_1.png' alt='Final iteration 1'>
-          </div>
-          <div class="col-half">
-            <p>Program Info has information on curriculum details and the costs and fees of the degree.</p>
-            <img src='../assets/ai_internship/degree_details_4_2.png' alt='Final iteration 2'>
-          </div>
-          <div class="col-half">
-            <p>Application Info has information on important dates and what materials are required to apply (letters of recommendation, test scores, etc).</p>
-            <img src='../assets/ai_internship/degree_details_4_3.png' alt='Final iteration 3'>
-          </div>
-          <div class="col-half">
-            <p>FAQ contains any FAQs the college wishes to list for potential students.</p>
-            <img src='../assets/ai_internship/degree_details_4_4.png' alt='Final iteration 4'>
-          </div>
-        </div>
-
-        <div class="row  margin-bottom-4">
           <div class="text-wrapper">
-            <h3>Implementation</h3>
-            <p>Once the final design iteration above was approved by Academic Innovation’s Associate Vice Provost and the rest of the Michigan Online team I was tasked with implementing the front end of the page. I constructed the necessary HTML and Less/CSS to build the framework and styling for each of the Degree Details pages.</p>
-            <p>When I completed my development I worked closely with the software development team to outline the new Django data models we would need to support the Degree Details page. Together we created a generalized Django template that could be utilized for any new online degree that Michigan Online adds to their database.</p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="text-wrapper">
-            <h3>Current State</h3>
-            <p>The Degree Details page we designed is currently live on Michigan Online, and is available to the thousands of members of the University of Michigan community. To date, there are <a href='https://online.umich.edu/online-degrees/' target='_blank'>nine online degrees available</a> on Michigan Online, and that number is expected to keep growing!</p>
+            <h2>Current State</h2>
+            <p>Once the final design iteration above was approved by Academic Innovation’s Associate Vice Provost and the rest of the Michigan Online team I was tasked with implementing the front end of the page.</p>
+            <p>The Degree Details page we designed is currently live on Michigan Online, and is available to the thousands of members of the University of Michigan community. To date, there are nine online degrees available on Michigan Online, and that number is expected to keep growing!</p>
           </div>
         </div>
 
