Finished latest update of AI project page

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -145,27 +145,24 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>Design Goals</h2>
             <p>Through speaking with stakeholders at Michigan Online together we created three goals for the new Degree Details design:</p>
-            <ol>
-              <li>Minimize maintenance costs for Michigan Online team</li>
-              <li>Present information specific enough for target users</li>
-              <li>Design an experience general enough to work for any U-M degree</li>
-            </ol>
+            <img src='../assets/ai_internship/design_goals.svg' style='width: 100%;' alt='Goals for the new design to meet'>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>Mockup Iteration</h2>
             <p>Throughout the iteration process I focused on three targets for my designs:</p>
-            <ol>
+            <img src='../assets/ai_internship/mockup_venn_diagram.svg' style='display: block; margin: 0 auto;' alt='My three focus areas for each round of mockups I completed'>
+            <!-- <ol>
               <li>Intelligent information architecture and ownership</li>
               <li>Matching the existing identity of Michigan Online</li>
               <li>Properly displaying info for our personas</li>
-            </ol>
+            </ol> -->
           </div>
         </div>
 
@@ -176,9 +173,9 @@
         </div>
         <div class='row margin-bottom-4'>
           <div class='col-half'>
-            <p>After multiple mockup iterations my designs received signoff from Michigan Online stakeholders. I was able to incorporate many pieces of Michigan Online’s visual identity in the final product while still creating a new and informative experience for users.</p>
-            <p>The tab navigation allowed for a shorter, more scannable page for users and presented information organized with our personas in mind.</p>
-            <p>The colored stripes and bulleted lists made for modular sections that met our goals of being specific enough for users but general enough to work for any degree.</p>
+            <p class='margin-bottom-3'>After multiple mockup iterations my designs received signoff from Michigan Online stakeholders. I was able to incorporate many pieces of Michigan Online’s visual identity in the final product while still creating a new and informative experience for users.</p>
+            <p class='margin-bottom-8'>The tab navigation allowed for a shorter, more scannable page for users and presented information organized with our personas in mind.</p>
+            <p class='margin-bottom-6'>The colored stripes and bulleted lists made for modular sections that met our goals of being specific enough for users but general enough to work for any degree.</p>
           </div>
           <div class='col-half'>
             <img class='screenshot' src='../assets/ai_internship/final_design_total.png' alt=''>
