Final revisions before publishing

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -59,7 +59,7 @@
             <div class='project-subtitle'>Designing and developing.</div>
           </div>
           <div class='col-half'>
-            <p>I improved the usability of existing AI tools and designed the experience of new products. I also helped to conduct user research and assisted with UI design, rapid prototyping, and web-based tool development.</p>
+            <p>I improved the usability of existing tools and designed the experience of new products. I also helped to conduct user research and assisted with UI design, rapid prototyping, and web-based tool development.</p>
             <div class='project-details'>
               <p>User Experience Design Fellow</p>
               <p>May - Aug. 2019</p>
@@ -130,18 +130,12 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h2>Personas</h2>
             <p>Using what I learned about our intended users I created two simple personas to help keep our upcoming designs focused on the right tasks and needs.</p>
-          </div>
-        </div>
-        <div class='row margin-bottom-4'>
-          <div class='col-half'>
-            <img src='../assets/ai_internship/persona_1.png' alt='Persona 1'>
-          </div>
-          <div class='col-half'>
-            <img src='../assets/ai_internship/persona_2.png' alt='Persona 2'>
+            <img src='../assets/ai_internship/persona_1.png' alt='Persona 1' class='screenshot margin-bottom-2'>
+            <img src='../assets/ai_internship/persona_2.png' alt='Persona 2' class='screenshot'>
           </div>
         </div>
 
@@ -158,11 +152,6 @@
             <h2>Mockup Iteration</h2>
             <p>Throughout the iteration process I focused on three targets for my designs:</p>
             <img src='../assets/ai_internship/mockup_venn_diagram.svg' style='display: block; margin: 0 auto;' alt='My three focus areas for each round of mockups I completed'>
-            <!-- <ol>
-              <li>Intelligent information architecture and ownership</li>
-              <li>Matching the existing identity of Michigan Online</li>
-              <li>Properly displaying info for our personas</li>
-            </ol> -->
           </div>
         </div>
 
