--- a/index.html
+++ b/index.html
@@ -50,50 +50,52 @@
       <div class='container'>
         <div class='homepage-header'>
           <h1>Hello -</h1>
-          <h3><a href='About.html' style='text-decoration: none; color: #313131'>I'm Jackson,</a> an interaction designer and developer.</h3>
-          <p>I focus on how technology can deliver better information to improve people's lives and communities. I'm currently a master's student at the University of Michigan, and I'm searching for full-time positions.</p>
+          <h3><a href='About.html' style='text-decoration: none; color: #313131'>I'm Jackson,</a> a UX designer and developer.</h3>
+          <p>I focus on how technology can deliver better information to improve people's lives and communities. I was a master's student at the University of Michigan, and I'm searching for new work.</p>
         </div>
 
-        <div class='row margin-bottom-2'>
+        <!-- <div class='row margin-bottom-2'>
           <div class='col-full'>
             <span id='design-tab' class='underline active-tab' onclick='openDesign(event);'>Design</span>
             <span id='dev-tab' class='underline' onclick='openDev(event);'>Development</span>
           </div>
-        </div>
+        </div> -->
 
         <div class='row' id='design-work'>
           <div class='col-half project-card-buffer'>
             <a href='projects/ai_internship.html'>
-              <img class='thumbnail' src='assets/Thumbnails/internship thumbnail.png'>
+              <img class='thumbnail' src='assets/Thumbnails/internship-thumb-8.png'>
             </a>
+            <h4>Michigan Online - Web Design & Development</h4>
           </div>
           <div class='col-half project-card-buffer'>
             <a href='projects/mapme.html'>
-              <img class='thumbnail' src='assets/Thumbnails/mapme thumbnail.png'>
+              <img class='thumbnail' src='assets/Thumbnails/mapme-8.png'>
             </a>
+            <h4>MapMe - User Research & Mobile Design</h4>
           </div>
-          <div class='col-half project-card-buffer'>
-            <a href='projects/Autodesk_Consulting.html'>
-              <img class='thumbnail' src='assets/Thumbnails/622.png'>
-            </a>
-          </div>
-          <div class='col-half'>
-            <a href='projects/3D_Emergency.html'>
-              <img class='thumbnail' src='assets/Thumbnails/3de_thumbnail.png'>
-            </a>
-          </div>
-        </div>
-
-        <div class='row' id='dev-work' style='display: none;'>
           <div class='col-half project-card-buffer'>
             <a href='projects/sorting.html'>
-              <img class='thumbnail' src='assets/Thumbnails/sorting thumbnail.png'>
+              <img class='thumbnail' src='assets/Thumbnails/sorting-8.png'>
             </a>
+            <h4>Seeing Sorting - Data Visualization & Web Development</h4>
           </div>
-          <div class='col-half project-card-buffer'>
+          <!-- <div class='col-half project-card-buffer'>
             <a href='projects/GoodListens.html'>
               <img class='thumbnail' src='assets/Thumbnails/goodlistens thumbnail.png'>
             </a>
+          </div> -->
+          <div class='col-half project-card-buffer'>
+            <a href='projects/Autodesk_Consulting.html'>
+              <img class='thumbnail' src='assets/Thumbnails/622-thumb-8.png'>
+            </a>
+            <h4>Autodesk - User Research Consulting</h4>
+          </div>
+          <div class='col-half'>
+            <a href='projects/3D_Emergency.html'>
+              <img class='thumbnail' src='assets/Thumbnails/3DE-thumb-8.png'>
+            </a>
+            <h4>3D Emergency - Mobile Design</h4>
           </div>
         </div>
 
