Updated styles so the titles are clickable on project cards

--- a/index.html
+++ b/index.html
@@ -62,40 +62,50 @@
         </div> -->
 
         <div class='row' id='design-work'>
-          <div class='col-half project-card-buffer'>
+          <div class='col-half project-card-buffer thumbnail'>
             <a href='projects/ai_internship.html'>
-              <img class='thumbnail' src='assets/Thumbnails/internship-thumb-8.png'>
+              <div>
+                <img class='thumbnail-img' src='assets/Thumbnails/internship-thumb-8.png'>
+                <h4>Michigan Online - Web Design & Development</h4>
+              </div>
             </a>
-            <h4>Michigan Online - Web Design & Development</h4>
           </div>
-          <div class='col-half project-card-buffer'>
+          <div class='col-half project-card-buffer thumbnail'>
             <a href='projects/mapme.html'>
-              <img class='thumbnail' src='assets/Thumbnails/mapme-8.png'>
+              <div>
+                <img class='thumbnail-img' src='assets/Thumbnails/mapme-8.png'>
+                <h4>MapMe - User Research & Mobile Design</h4>
+              </div>
             </a>
-            <h4>MapMe - User Research & Mobile Design</h4>
           </div>
-          <div class='col-half project-card-buffer'>
+          <div class='col-half project-card-buffer thumbnail'>
             <a href='projects/sorting.html'>
-              <img class='thumbnail' src='assets/Thumbnails/sorting-8.png'>
+              <div>
+                <img class='thumbnail-img' src='assets/Thumbnails/sorting-8.png'>
+                <h4>Seeing Sorting - Data Visualization & Web Development</h4>
+              </div>
             </a>
-            <h4>Seeing Sorting - Data Visualization & Web Development</h4>
           </div>
           <!-- <div class='col-half project-card-buffer'>
             <a href='projects/GoodListens.html'>
               <img class='thumbnail' src='assets/Thumbnails/goodlistens thumbnail.png'>
             </a>
           </div> -->
-          <div class='col-half project-card-buffer'>
+          <div class='col-half project-card-buffer thumbnail'>
             <a href='projects/Autodesk_Consulting.html'>
-              <img class='thumbnail' src='assets/Thumbnails/622-thumb-8.png'>
+              <div>
+                <img class='thumbnail-img' src='assets/Thumbnails/622-thumb-8.png'>
+                <h4>Autodesk - User Research Consulting</h4>
+              </div>
             </a>
-            <h4>Autodesk - User Research Consulting</h4>
           </div>
-          <div class='col-half'>
+          <div class='col-half thumbnail'>
             <a href='projects/3D_Emergency.html'>
-              <img class='thumbnail' src='assets/Thumbnails/3DE-thumb-8.png'>
+              <div>
+                <img class='thumbnail-img' src='assets/Thumbnails/3DE-thumb-8.png'>
+                <h4>3D Emergency - Mobile Design</h4>
+              </div>
             </a>
-            <h4>3D Emergency - Mobile Design</h4>
           </div>
         </div>
 
