Hotfixes to text inside the AI svg diagrams

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -143,7 +143,7 @@
           <div class="text-wrapper">
             <h2>Design Goals</h2>
             <p>Through speaking with stakeholders at Michigan Online together we created three goals for the new Degree Details design:</p>
-            <img src='../assets/ai_internship/design_goals.svg' style='width: 100%;' alt='Goals for the new design to meet'>
+            <img src='../assets/ai_internship/design_goals.png'  alt='Goals for the new design to meet'>
           </div>
         </div>
 
@@ -151,7 +151,7 @@
           <div class="text-wrapper">
             <h2>Mockup Iteration</h2>
             <p>Throughout the iteration process I focused on three targets for my designs:</p>
-            <img src='../assets/ai_internship/mockup_venn_diagram.svg' style='display: block; margin: 0 auto;' alt='My three focus areas for each round of mockups I completed'>
+            <img src='../assets/ai_internship/mockup_venn_diagram.png' style='display: block; margin: 0 auto;' alt='My three focus areas for each round of mockups I completed'>
           </div>
         </div>
 
